clusters/titania/apps/torrents/deluge/deluge-wireguard-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge-wireguard
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: deluge-wireguard
  template:
    metadata:
      labels:
        app: deluge-wireguard
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
      volumes:
        - name: wireguard-config
          secret:
            secretName: wg-config-vault
            optional: false
        - name: wireguard-rw
          emptyDir: {}
        - name: deluge-config
          persistentVolumeClaim:
            claimName: deluge-config
        - name: nfs-downloads
          persistentVolumeClaim:
            claimName: deluge-downloads-nfs
        - name: nfs-arr-downloads
          persistentVolumeClaim:
            claimName: deluge-arr-nfs
      containers:
      - name: deluge-wireguard
        image: ghcr.io/binhex/arch-delugevpn:2.2.0-1-02
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN"]
        volumeMounts:
        - name: wireguard-rw
          mountPath: /config/wireguard
        - name: deluge-config
          mountPath: /config
        - mountPath: /data/downloads
          name: nfs-downloads
        - mountPath: /data/arr-downloads
          name: nfs-arr-downloads
        resources:
          requests:
            memory: "128Mi"
            cpu: "25m"
