clusters/titania/apps/torrents/deluge/deluge-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge-openvpn
spec:
  selector: 
    app: deluge-openvpn
  type: ClusterIP
  ports:
  - port: 8112
    targetPort: 8112
---
apiVersion: v1
kind: Service
metadata:
  name: deluge-wireguard
spec:
  selector:
    app: deluge-wireguard
  type: ClusterIP
  ports:
  - port: 8112
    targetPort: 8112
---
apiVersion: v1
kind: Service
metadata:
  name: deluge-proxy
spec:
  selector:
    app: deluge-openvpn
  type: ClusterIP
  ports:
  - port: 9118
    targetPort: 9118
